# fastapi-beanie-simplified

./: README.md  TESTING.md  pyproject.toml
.github/.instructions/: fastapi.instructions.md
apiapp/infrastructure/: database.py
apiapp/modules/auth/: router.py
apiapp/modules/hospital/: model.py  router.py  schemas.py  use_case.py
apiapp/modules/pet/: model.py  router.py  schemas.py  use_case.py
docs/: usecase-pattern.md
tests/: conftest.py  test_auth_refresh.py
