[tool.poetry]
name = "apiapp"
version = "0.1.0"
description = ""
authors = ["jakee <jakee.indapanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = {extras = ["standard"], version = "^0.139.2"}
pydantic-settings = "^2.14.2"
loguru = "^0.7.3"
pydantic = {extras = ["email"], version = "^2.13.4"}
pymongo = "^4.17.0"
jwcrypto = "^1.5.8"
python-multipart = "^0.0.32"
werkzeug = "^3.1.8"
python-dotenv = "^1.2.2"
beanie = "^2.1.0"
python-jose = "^3.5.0"
fastapi-pagination = "^0.15.15"
bcrypt = "^5.0.0"
typer = "^0.27.0"
rich = "^15.0.0"
questionary = "^2.1.1"
jinja2 = "^3.1.6"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.51.0"
ruff = "^0.15.22"
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
httpx = "^0.28.1"
asgi-lifespan = "^2.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.poetry.scripts]
controller = "apiapp.cmd.controller:main"
forge = "cli.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
